[package]
name = "l337-fzn-postgres"
version = "0.2.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]
edition = "2018"

[dependencies]
l337 = { path = ".." }
futures = { version = "0.3", features = [ "compat" ] }
tokio = "0.2"
tokio-postgres = "0.4.0-rc.3"
log = "0.4.8"
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }