[package]
name = "l337-postgres"
version = "0.4.2"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "l337 manager for tokio-postgres"

[dependencies]
l337 = { version = "0.4", path = ".." }
futures = "0.3"
tokio = "1.4.0"
tokio-postgres = { version = "0.7.1", features = ["runtime"] }
log = "0.4.8"
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros"] }
